Fix the oshmail overlay on IE
IE8 was crashing (reloading the tab, and eventually showing res://ieframe.dll/acr_error.htm in the location bar) when jQuery replaceWith was used to replace the contents of the overlay element. Using .html worked but the content was displayed behind the overlay in IE8, even though it was being added to the correct part of the DOM. Using .append works correctly, tested in FF, Chrome, IE8 and IE9

--- a/src/osha/theme/browser/resources/overlay/overlay.css
+++ b/src/osha/theme/browser/resources/overlay/overlay.css
@@ -1,4 +1,4 @@
-.osha-overlay, #overlay-spinner {
+.osha-overlay {
   padding: 1em;
   border:1px solid #666;
   -moz-box-shadow:0 0 90px 5px #000;
@@ -12,6 +12,7 @@
   top: 0;
   bottom: 0;
   left: 0;
+  right: 0;
   margin: 30px;
   z-index: 100;
   overflow: auto;
@@ -20,19 +21,15 @@
 .osha-overlay-close {
   background-image:url(++resource++osha.theme.resources/overlay/close.png);
   position: fixed;
-  height:35px;
-  width:35px;
+  height: 35px;
+  width: 35px;
   display: block;
-  cursor:pointer;
-}
-
-.osha-overlay.full .osha-overlay-close {
+  cursor: pointer;
   right: 0;
   top: 0;
 }
 
 #overlay-spinner {
-  display: None;
   position: fixed;
   margin: -13px 0 0 -13px;
   left: 50%;
